# eventsource-stream

./: Cargo.toml
examples/: reqwest.rs
src/: event.rs  event_stream.rs  lib.rs  main.rs  parser.rs  utf8_stream.rs
tests/: eventsource-stream.rs
